--- a/ind/index.html
+++ b/ind/index.html
@@ -34,6 +34,12 @@
       </div>
     </nav>
 
+    <div class="row">
+      <div class="col-md-6">
+        </div>
+      <div class="col-md-6">
+        </div>
+    </div>
 
   </header>
 
