--- a/ind/index.html
+++ b/ind/index.html
@@ -35,9 +35,9 @@
     </nav>
 
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6 col-sm-12">
         </div>
-      <div class="col-md-6">
+      <div class="col-md-6 col-sm-12">
         </div>
     </div>
 
