--- a/ind/index.html
+++ b/ind/index.html
@@ -36,9 +36,14 @@
 
     <div class="row">
       <div class="col-md-6 col-sm-12">
-        </div>
+        <h1>Deportes</h1>
+        <p>Tu tienda de ropa deportiva</p>
+        <button type="button" class="btn btn-primary">Descargar para Android</button>
+        <button type="button" class="btn btn-success">Descargar para iOS</button>  
+      </div>
       <div class="col-md-6 col-sm-12">
-        </div>
+        
+      </div>
     </div>
 
   </header>
