--- a/ind/index.html
+++ b/ind/index.html
@@ -42,7 +42,7 @@
         <button type="button" class="btn btn-success">Descargar para iOS</button>  
       </div>
       <div class="col-md-6 col-sm-12">
-        
+        <img src="app.jpg" class="img-fluid" alt="Imagen de la aplicación">
       </div>
     </div>
 
