--- a/ind/index.html
+++ b/ind/index.html
@@ -12,7 +12,7 @@
   <title>Atmósfera - Tu tienda de ropa deportiva</title>
   <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQh58iYREK1q/7G0kP496Wi46hRKpba0JEW5kM13+286q/43cY17JEfoQ" crossorigin="anonymous">
-  
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i" rel="stylesheet">
 
 
 
