--- a/ind/index.html
+++ b/ind/index.html
@@ -21,7 +21,7 @@
 
 <body>
   <header id="title">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-padding-bottom">
       <container-fluid>
         <div class="container">
             <a class="navbar-brand" href="https://www.atmosferasport.es/"><h1 class="font-family: 'Montserrat', sans-serif;">Atmósfera Sport</h1></a>
