--- a/ind/index.html
+++ b/ind/index.html
@@ -28,16 +28,25 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
+            
+
+            
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="https://www.atmosferasport.es/inicio-sesion?back=my-account/">Mi cuenta</a>
+                  <a class="nav-link" href="https://www.atmosferasport.es/inicio-sesion?back=my-account/">
+                    <button class="btn btn-primary btn-margin">Mi cuenta</button>
+                  </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="https://www.atmosferasport.es/tiendas">Tiendas</a>
+                  <a class="nav-link" href="https://www.atmosferasport.es/tiendas">
+                    <button class="btn btn-secondary btn-margin">Tiendas</button> 
+                  </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="https://www.atmosferasport.es/marcas">Marcas</a>
+                  <a class="nav-link" href="https://www.atmosferasport.es/marcas">
+                    <button class="btn btn-danger btn-margin">Marcas</button>
+                  </a>
                 </li>
               </ul>
             </div>
