--- a/ind/index.html
+++ b/ind/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQh58iYREK1q/7G0kP496Wi46hRKpba0JEW5kM13+286q/43cY17JEfoQ" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
-
+  <script src="https://kit.fontawesome.com/466e292557.js" crossorigin="anonymous"></script>
 
 
 </head>
@@ -67,6 +67,32 @@
     </div>
 
   </header>
+<!-- 4.7 -->
+  <section id="features">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 text-center">
+          <i class="fas fa-check-circle fa-3x mb-3"></i>
+          <h3>Integer sit amet</h3>
+          <p>Ut hendrerit in ipsum a suscipit.</p>
+        </div>
+        <div class="col-md-4 text-center">
+          <i class="fas fa-bullseye fa-3x mb-3"></i>
+          <h3>Nam lobortis</h3>
+          <p>Orci varius natoque penatibus et magnis dis parturient montes.</p>
+        </div>
+        <div class="col-md-4 text-center">
+          <i class="fas fa-heart fa-3x mb-3"></i>
+          <h3>Vivamus eget</h3>
+          <p>Praesent sem nisl, fringilla sollicitudin malesuada et, molestie vel elit.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+<!-- 4.7 -->
+
+
 
   
 </body>
