--- a/ind/index.html
+++ b/ind/index.html
@@ -93,6 +93,45 @@
 <!-- 4.7 -->
 
 
+<!-- 4.8 -->
+  <!-- Testimonios -->
+  <section id="testimonials">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-8 text-center">
+            <h2 style="font-size: 1.5rem; font-family: montserrat; font-weight: 700; color: black;">"Esta aplicación es justo lo que necesitaba"</h2>
+            <div class="testimonial">
+              <img src="lady-img.jpg" alt="Chica" class="img-fluid rounded-circle mb-3" width="100">
+              <em style="font-size: 1.2rem; color: white; font-style: italic;">Beverly, Illinois</em>
+            </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Prensa -->
+  <section id="press" class="py-5 bg-light">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-md-10">
+              <div class="row">
+                <div class="col-md-3 col-sm-6 mb-3">
+                  <a href="#"><img src="TechCrunch.png" alt="empresa1" class="img-fluid"></a>
+                </div>
+                <div class="col-md-3 col-sm-6 mb-3">
+                  <a href="#"><img src="tnw.png" alt="empresa2" class="img-fluid"></a>
+                </div>
+                <div class="col-md-3 col-sm-6 mb-3">
+                  <a href="#"><img src="bizinsider.png" alt="empresa3" class="img-fluid"></a>
+                </div>
+                <div class="col-md-3 col-sm-6 mb-3">
+                  <a href="#"><img src="mashable.png" alt="empresa4" class="img-fluid"></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+  </section>
+<!-- 4.8 -->
 
   
 </body>
