--- a/ind/index.html
+++ b/ind/index.html
@@ -156,6 +156,62 @@
   </section>
 <!-- 4.8 -->
 
+<!-- 4.10 -->
+
+  <section id="suscripciones" class="py-5">
+    <div class="container">
+      <h2 class="text-center mb-4 " style="font-weight: 700; font-family: Montserrat;">Modalidades de suscripción</h2>
+      <h3 class="text-center mb-4" style="font-size: 1rem; font-weight: 700; font-family: Montserrat;">Escoja la que guste</h3>
+      <div class="row justify-content-center">
+        <div class="col-md-10">
+          <div class="row">
+            <div class="col-md-4 mb-3">
+              <div class="card h-100 d-flex flex-column">
+                <div class="card-header">
+                  <h2 class="card-title text-center">Económico</h2>
+                </div>
+                <div class="card-body text-center">
+                  <h3>Clase hierro</h3>
+                  <h4>10€/mes</h4>
+                  <p>Entrega lenta y con anuncios</p>
+                  <button type="button" class="btn btn-primary">La quiero</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-3">
+              <div class="card h-100 d-flex flex-column">
+                <div class="card-header">
+                  <h2 class="card-title text-center">Intermedio</h2>
+                </div>
+                <div class="card-body text-center">
+                  <h3>Clase bronce</h3>
+                  <h4>20€/mes</h4>
+                  <p>Entrega normal y sin anuncios</p>
+                  <button type="button" class="btn btn-primary">La quiero</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-3">
+              <div class="card h-100 d-flex flex-column">
+                <div class="card-header">
+                  <h2 class="card-title text-center">Premium</h2>
+                </div>
+                <div class="card-body text-center">
+                    <h3>Clase oro</h3>
+                    <h4>30€/mes</h4>
+                    <p>Entrega rapida, sin anuncios y con ofertas</p>
+                  <button type="button" class="btn btn-primary">La quiero</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+<!-- 4.10 -->
+
   
 </body>
 </html>
